--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <p style="font-size: 0.9em;">Exemplo: Pago via PIX / Pago em dinheiro / Cartão</p>
             <input type="text" id="extraInfo" name="extraInfo" placeholder="Informações adicionais"><br>
 
-            <button type="button" id="generatePDF">🚀 Gerar PDF</button>
+            <button type="button" id="generatePDF">🚀 Gerar Recibo (PDF)</button>
             <br/>
-            <div id="loading" style="display: none; font-weight: bold; text-align: center;">⏳ Emitindo nota...</div>
+            <div id="loading" style="display: none; font-weight: bold; text-align: center;">⏳ Emitindo recibo...</div>
             <br/>
             <button onclick="refreshPage()" style="background: rgb(0, 119, 255); font-size: 0.8em;">
                 🔄 Erro? Atualizar Página</button>
